--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,5 @@
-.hg
-.hgignore
-*.swp
-*.mu
-music-info.xml
-__pycache__
-*adv.xml
-*exh.xml
-*nov.xml
-.mypy_cache
-*.def
-*.2dx
-*.dll
-*.exe
-*.mp3
-*.wav
-*.ogg
+/custom_charts
+/custom_charts.zip
+/error_log.txt
+/updates
+/.idea
